<resources>
    <string name="app_name">NSE Portfolio Tracker</string>
    <string name="tab_text_1">My Portfolio</string>
    <string name="tab_text_2">My Alerts</string>
    <string name="title_activity_add_portfolio">AddPortfolio</string>
    <string name="title_activity_edit_portfolio">EditPortfolio</string>
    <string name="title_activity_add_alert">AddAlert</string>
    <string name="title_activity_edit_alert">EditAlert</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>

    <string name="add_stock_portfolio">Add Stock to My Portfolio</string>
    <string name="add_stock_alert">Add New Alert</string>
    <string name="enter_stock_name">Enter the Stock Symbol</string>
    <string name="enter_qty">Enter the number of shares</string>
    <string name="enter_lower">Enter Lower Alert Price</string>
    <string name="enter_upper">Enter Upper Alert Price</string>
    <string name="sym_notfound">Symbol not found</string>
    <string name="num_notfound">Enter a valid number!</string>
    <string name="enter_one">Enter atleast one of lower and upper</string>
    <string name="sym_presenterror">Stock Already on list please use edit</string>
    <string name="alert_presenterror">Alert already present on list please use edit</string>
    <string name ="url_prefix">https://www.quandl.com/api/v3/datasets/NSE/</string>
    <string name="url_suffix">.json?api_key=XXXXXXXXXX\u0026rows=2</string>
    <string name="error_net">Error Fetching Data</string>
    <string name="json_data">data</string>
    <string name="fetch">Fetching the latest stock prices</string>
    <string name="add_Alert">Adding Alert...</string>

    <string name="summary">Total Portfolio Value: \u20B9</string>








    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="edit_alert">EDIT ALERT</string>
    <string name="name_of_the_stock">Name of the Stock</string>
    <string name="rblbank">RBLBANK</string>
    <string name="number_of_shares">Number of Shares</string>
    <string name="upper_price_for_alert">Upper Price for Alert</string>
    <string name="lower_price_for_alert">Lower Price for Alert</string>
    <string name="cancel">Cancel</string>
    <string name="done">Done</string>


</resources>
